# Wo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pubspec.yaml
backend/: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 091db215b2c4_p7_accounting_plugin.py  0d06da1c9575_p2_families.py  2978fdfc85e2_p10_recipe_plugin.py  358ff6a8ba66_p3_2_photo_plugin.py  3e9daa1cfecc_p3_1_plugin_platform.py  4a4ada22c6a9_p12_recipe_tags.py  5777670d1df9_p16_memory_plugin.py  60be78b8af24_p4_notifications.py  6629a177be6d_p11_recipe_cover.py  71f30f7277fd_p1_foundation.py  7a1b2c3d4e5f_p17_stock_plugin.py  7c8d9e0f1a2b_p35_travel_place_status.py  8fc2957c819d_p34_travel_plugin.py  9a0b1c2d3e4f_p36_travel_memory_link.py  a1b2c3d4e5f6_p5_user_phone.py  a4b5c6d7e8f9_p22_subscription_plugin.py  a7b8c9d0e1f2_p37_memory_timeline_index.py  (+22 more)
backend/app/: main.py
backend/deploy/: RELEASE.md  deploy.sh  publish-apk.sh  release.sh  setup-server.sh
backend/scripts/: migrate_storage_to_cos.py
backend/tests/: conftest.py  test_accounting.py  test_accounting_receipt.py  test_accounting_reminders.py  test_ai.py  test_ai_config.py  test_ai_image.py  test_anniversary.py  test_anniversary_reminders.py  test_app_release.py  test_auth.py  test_bootstrap.py  test_calendar.py  test_chore.py  test_crypto.py  test_devices.py  test_errors.py  test_expiry.py  test_expiry_reminders.py  test_families.py  test_health.py  test_invitations.py  test_me.py  test_me_avatar.py  test_members.py  test_memory.py  test_movie.py  test_notification_prefs.py  test_notifications.py  test_password.py  test_photo.py  test_plant.py  test_plant_reminders.py  test_plugins.py  test_push.py  test_recipe.py  test_retirement.py  test_retirement_reminders.py  test_stock.py  test_stock_reminders.py  (+5 more)
(+306 files in other folders)
